[fix] 피드백 반영 -> security, auth, user domain 분리